--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="style.css" />
   <link rel="icon" type="image/x-icon" href="favicon.png">
 
+    <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
 </head>
 <body>
   <header>
@@ -62,6 +64,21 @@
   </main>
 
 <script>
+    const firebaseConfig = {
+    apiKey: "AIzaSyBwCwoyzuVPrNQ8kt3yPfkpHLfloQTYHmw",
+    authDomain: "globe-gallery-1.firebaseapp.com",
+    projectId: "globe-gallery-1",
+    storageBucket: "globe-gallery-1.firebasestorage.app",
+    messagingSenderId: "20673593446",
+    appId: "1:20673593446:web:0ad86df1c323ffed17eda7",
+    measurementId: "G-9871ZXVCN6"
+};
+
+// Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  const db = firebase.firestore();
+
+
   function toggleMenu() {
     const menu = document.getElementById("mobileMenu");
     if (menu.style.display === "flex") {
