--- a/admin.html
+++ b/admin.html
@@ -66,6 +66,15 @@
     </section>
   </main>
 
-  <script src="admin.js"></script>
+<!-- Firebase App (core) -->
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js"></script>
+
+<!-- Firebase services you use -->
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-storage.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js"></script>
+
+<!-- Your custom script (admin.js) -->
+<script src="admin.js"></script>
 </body>
 </html>
