--- a/admin.html
+++ b/admin.html
@@ -66,12 +66,15 @@
     </section>
   </main>
 
-<!-- Firebase v8 -->
+<!-- Firebase v8 Scripts (Safe for <script> tag use) -->
 <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-storage.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
+
+<!-- Your custom script -->
 <script src="admin.js"></script>
+
 
 </body>
 </html>
