--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <link rel="stylesheet" href="style.css" />
   <link rel="icon" type="image/x-icon" href="favicon.png">
 
-    <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
+  <!-- Supabase JS client -->
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js/dist/supabase.min.js"></script>
 </head>
 <body>
   <header>
@@ -48,9 +48,7 @@
       <a href="#" aria-label="Art">Art</a>
     </section>
 
-    
     <div id="homeArtworks" class="artwork-grid"></div>
-
 
     <section class="info" id="about">
       <h2>About GlobeGallery</h2>
@@ -64,21 +62,10 @@
   </main>
 
 <script>
-const firebaseConfig = {
-  apiKey: "AIzaSyBwCwoyzuVPrNQ8kt3yPfkpHLfloQTYHmw",
-  authDomain: "globe-gallery-1.firebaseapp.com",
-  projectId: "globe-gallery-1",
-  storageBucket: "globe-gallery-1.appspot.com",
-  messagingSenderId: "20673593446",
-  appId: "1:20673593446:web:0ad86df1c323ffed17eda7",
-  measurementId: "G-9871ZXVCN6"
-};
-
-
-// Initialize Firebase
-  firebase.initializeApp(firebaseConfig);
-  const db = firebase.firestore();
-
+  // Initialize Supabase
+  const supabaseUrl = 'https://enlujcfoktovgfvxnrqw.supabase.co';
+  const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImVubHVqY2Zva3RvdmdmdnhucnF3Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDg4ODY2MDYsImV4cCI6MjA2NDQ2MjYwNn0.esnA0u8NZFk-_v1upWFgz__YEFuxJFxiTZpxA9kSo3s';
+  const supabase = supabase.createClient(supabaseUrl, supabaseKey);
 
   function toggleMenu() {
     const menu = document.getElementById("mobileMenu");
@@ -106,29 +93,43 @@ const firebaseConfig = {
   });
 
   // Render artworks on home page
-  function renderHomeArtworks() {
+  async function renderHomeArtworks() {
     const homeContainer = document.getElementById("homeArtworks");
-    const savedArtworks = localStorage.getItem("globeGalleryArtworks");
-    const artworks = savedArtworks ? JSON.parse(savedArtworks) : [];
+    homeContainer.innerHTML = "<p>Loading artworks...</p>";
 
-    homeContainer.innerHTML = "";
+    // Fetch artworks from Supabase
+    const { data: artworks, error } = await supabase
+      .from('artworks')
+      .select('*')
+      .order('createdAt', { ascending: false });
 
-    if (artworks.length === 0) {
+    if (error) {
+      homeContainer.innerHTML = `<p>Error loading artworks: ${error.message}</p>`;
+      return;
+    }
+
+    if (!artworks || artworks.length === 0) {
       homeContainer.innerHTML = "<p>No artworks uploaded yet.</p>";
       return;
     }
 
-    artworks.forEach((artwork, index) => {
+    homeContainer.innerHTML = "";
+
+    artworks.forEach((artwork) => {
       const card = document.createElement("div");
       card.classList.add("artwork-card");
 
-      const priceDisplay = artwork.inShop
-        ? `<p class="price">$${artwork.price.toFixed(2)}</p>`
+      const priceDisplay = artwork.forSale && artwork.price
+        ? `<p class="price">$${parseFloat(artwork.price).toFixed(2)}</p>`
         : `<p class="price"><em>For Display Only</em></p>`;
 
+      // Supabase storage public URL - assuming image_url contains the full public URL or path you stored
+      // If you store just the path, adjust accordingly to generate full URL using supabase.storage.from('bucket').getPublicUrl()
+      const imageUrl = artwork.image_url || 'placeholder.jpg';
+
       card.innerHTML = `
-        <a href="collections.html?id=${index}">
-          <img src="${artwork.imageData}" alt="${artwork.title}" />
+        <a href="collections.html?id=${artwork.id}">
+          <img src="${imageUrl}" alt="${artwork.title}" />
           <div class="details">
             <h3>${artwork.title}</h3>
             <p>${artwork.description}</p>
