--- a/admin.html
+++ b/admin.html
@@ -68,7 +68,9 @@
 
 
 <!-- Your custom script -->
-<script src="admin.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.42.3/+esm" type="module"></script>
+<script type="module" src="admin.js"></script>
+
 
 
 </body>
