--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <header>
-    <div class="logo">GlobeGallery testt</div>
+    <div class="logo">GlobeGallery</div>
     <nav class="desktop-nav">
       <a href="#hero">Home</a>
       <!-- <a href="#categories">Exhibitions</a> -->
