--- a/auth.html
+++ b/auth.html
@@ -102,7 +102,7 @@
   <a href="#">Terms of Use</a> | <a href="#">Privacy Policy</a>
 </div>
 
-<script src="login.js" defer></script>
+<script src="auth.js" defer></script>
 
 </body>
 </html>
