--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <a href="/shop.html">Shop</a>
       <a href="#about">About</a>
       <a href="#contact">Contact</a>
+      <a href="/auth.html">Login/Signup</a>
       <a href="admin.html" class="admin-link">Admin</a>
     </nav>
     <div class="menu-icon" onclick="toggleMenu()">☰</div>
@@ -30,6 +31,7 @@
       <a href="#shop">Shop</a>
       <a href="#about">About</a>
       <a href="#contact">Contact</a>
+      <a href="/auth.html">Login/Signup</a>
       <a href="admin.html" class="admin-link">Admin</a>
     </nav>
   </header>
